--- a/assets/style.css
+++ b/assets/style.css
@@ -37,6 +37,24 @@
 
 /* Floating Animation */
 
+@-webkit-keyframes widthAnimation {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
+@keyframes widthAnimation {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 100%;
+  }
+}
+
 @-webkit-keyframes float-10 {
   0% {
     transform: translateY(0px);
@@ -226,25 +244,12 @@ body {
   font-weight: 600;
   text-transform: uppercase;
   padding: 0 1rem;
-  margin-bottom: 1rem;
-  display: inline-block;
-  position: relative;
-  margin: 0 1rem;
-  z-index: 0;
+  margin: 0 1.2rem 1rem;
 }
 
-.section__description::after {
-  display: block;
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  height: 100%;
-  width: 100%;
-  z-index: -1;
-  opacity: 0.7;
-  transform: scale(1.07, 1.05) skewX(-15deg);
-  background-image: var(--gradient-primary);
+.section__description.highlight {
+  position: relative;
+  display: inline-block;
 }
 
 .section__header {
@@ -440,9 +445,11 @@ h4 {
   -webkit-animation: float-10 4s ease-in-out infinite;
 }
 
-.highlight {
+h1 span,
+h2 span {
   position: relative;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
+  display: inline-block;
 }
 
 .highlight::after {
@@ -452,9 +459,9 @@ h4 {
   bottom: 0;
   left: 0;
   height: 100%;
-  width: 100%;
   z-index: -1;
   opacity: 0.7;
+  animation: widthAnimation 0.5s ease-in-out forwards;
   transform: scale(1.07, 1.05) skewX(-15deg);
   background-image: var(--gradient-primary);
 }
@@ -592,7 +599,7 @@ h4 {
   padding: 2rem 5.4rem 7rem;
 }
 
-.operations__content--active {
+.operations__content.--active {
   display: grid;
   grid-template-columns: 4rem 1fr;
   column-gap: 5rem;
@@ -711,7 +718,7 @@ h4 {
   margin: 0;
 }
 
-.dots__dot--active {
+.dots__dot.--active {
   /* background-color: var(--white); */
   background-color: var(--grey-dark);
   opacity: 1;
