Building Tab for Operations Section

--- a/assets/style.css
+++ b/assets/style.css
@@ -151,19 +151,6 @@
   }
 }
 
-.float-10 {
-  animation: float-10 4s ease-in-out infinite;
-}
-.float10 {
-  animation: float10 4s ease-in-out infinite;
-}
-.floatX {
-  animation: floatX 4s ease-in-out infinite;
-}
-.floatM {
-  animation: floatM 4s ease-in-out infinite;
-}
-
 html {
   font-size: 62.5%;
   box-sizing: border-box;
@@ -225,10 +212,6 @@ body {
   transition: transform 1s, opacity 1s;
 }
 
-.border-bottom {
-  border-bottom: 1px solid var(--grey);
-}
-
 .section--hidden {
   opacity: 0;
   transform: translateY(8rem);
@@ -250,6 +233,7 @@ body {
 .section__description.highlight {
   position: relative;
   display: inline-block;
+  animation: float10 4s ease-in-out infinite;
 }
 
 .section__header {
@@ -279,13 +263,27 @@ body {
 }
 
 .btn.btn-primary {
-  color: var(--tertiary);
-  background-color: var(--primary);
+  position: relative;
+  overflow: hidden;
+  background-image: var(--gradient-primary);
 }
 
-.btn.btn-primary:hover {
-  color: var(--primary);
-  background-color: var(--tertiary);
+.btn.btn-primary:after {
+  content: '';
+  width: 5rem;
+  height: 20rem;
+  top: -80px;
+  left: -80px;
+  opacity: 0.4;
+  position: absolute;
+  background: var(--white);
+  transform: rotate(45deg);
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+.btn.btn-primary:hover:after {
+  left: 120%;
+  transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
 .btn.btn-secondary {
@@ -294,6 +292,7 @@ body {
 }
 
 .btn.btn-secondary:hover {
+  color: var(--tertiary);
   background-color: var(--primary);
 }
 
@@ -304,7 +303,7 @@ body {
 
 .btn.btn-tertiary:hover {
   color: var(--tertiary);
-  background-color: var(--secondary);
+  background-color: var(--primary);
 }
 
 .btn--text {
@@ -565,18 +564,26 @@ h2 span {
   max-width: 100rem;
   margin: 12rem auto 0 auto;
   border-radius: var(--rounded-4);
-  background-color: rgba(var(--tertiary-rgb), 0.04);
+  /* background-color: rgba(var(--tertiary-rgb), 0.04); */
+  background-color: var(--tertiary);
 }
 
 .operations__tab-container {
   display: flex;
+  gap: 3rem;
   justify-content: center;
 }
 
 .operations__tab {
-  margin-right: 2.5rem;
   color: var(--tertiary);
   transform: translateY(-50%);
+  background-image: var(--gradient-primary);
+  border-radius: var(--rounded-2);
+}
+
+.operations__tab:hover {
+  outline: 0.6rem solid var(--tertiary);
+  transition: all 0.2s ease-in-out;
 }
 
 .operations__tab span {
@@ -586,15 +593,15 @@ h2 span {
 }
 
 .operations__tab.--active {
-  color: var(--primary);
+  color: var(--tertiary);
   transform: translateY(-66%);
   background-color: var(--tertiary);
+  outline: 0.6rem solid var(--tertiary);
+  transition: all 0.2s ease-in-out;
 }
 
 .operations__content {
   display: none;
-
-  /* JUST PRESENTATIONAL */
   font-size: 1.7rem;
   padding: 2rem 5.4rem 7rem;
 }
@@ -602,14 +609,20 @@ h2 span {
 .operations__content.--active {
   display: grid;
   grid-template-columns: 4rem 1fr;
-  column-gap: 5rem;
+  column-gap: 4rem;
   row-gap: 0.5rem;
+}
+
+.operations__content p {
+  grid-column: 2;
+  color: var(--white);
 }
 
 .operations__header {
   font-size: 2.25rem;
   font-weight: 500;
   align-self: center;
+  color: var(--primary);
 }
 
 .operations__icon {
@@ -625,13 +638,9 @@ h2 span {
   -webkit-animation: float10 4s ease-in-out infinite;
 }
 
-.operations__content p {
-  grid-column: 2;
-}
-
 /* SLIDER */
 .slider {
-  max-width: 100rem;
+  max-width: 120rem;
   height: 50rem;
   margin: 0 auto;
   position: relative;
@@ -644,7 +653,6 @@ h2 span {
   position: absolute;
   top: 0;
   width: 100%;
-  height: 50rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -665,20 +673,19 @@ h2 span {
   top: 50%;
   z-index: 10;
   border: none;
-  background: var(--light);
   font-family: inherit;
-  color: var(--grey-dark);
-  border-radius: var(--rounded-circle);
-  height: 5.5rem;
-  width: 5.5rem;
+  color: var(--tertiary);
+  background-image: var(--gradient-primary);
+  border-radius: var(--rounded-2);
+  height: 6rem;
+  width: 6rem;
   font-size: 3.25rem;
   cursor: pointer;
   transition: all ease-in-out 0.3s;
 }
 
 .slider__btn:hover {
-  color: var(--tertiary);
-  background-color: var(--primary);
+  outline: 0.6rem solid var(--tertiary);
 }
 
 .slider__btn--left {
@@ -726,19 +733,58 @@ h2 span {
 
 /* TESTIMONIALS */
 .testimonial {
-  width: 65%;
+  width: 70%;
   position: relative;
+  padding: 6rem;
+  border-radius: var(--rounded-4);
+  outline: 0.1rem dashed var(--tertiary);
+  outline-offset: -0.1rem;
 }
 
 .testimonial::before {
-  content: '\201C';
+  content: '\201D';
   position: absolute;
-  top: -5.7rem;
-  left: -6.8rem;
+  top: 3rem;
+  right: 5rem;
   line-height: 1;
   font-size: 20rem;
   font-family: inherit;
+  /* color: var(--tertiary); */
+  background: var(--gradient-primary);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.testimonial__author {
+  font-style: normal;
+  display: grid;
+  grid-template-columns: auto;
+  column-gap: 2rem;
+  padding: 1rem 1rem 1rem 2rem;
+  width: max-content;
+  margin-bottom: 3rem;
+  border-radius: 2rem 5rem 5rem 2rem;
+  background-color: var(--tertiary);
+}
+
+.testimonial__photo {
+  grid-row: 1 / span 2;
+  width: 7rem;
+  border-radius: var(--rounded-circle);
+  grid-column: 2;
+}
+
+.testimonial__name {
+  font-size: 1.7rem;
+  font-weight: 500;
   color: var(--primary);
+  align-self: self-end;
+  margin: 0;
+}
+
+.testimonial__location {
+  font-size: 1.5rem;
+  color: var(--white);
 }
 
 .testimonial__header {
@@ -749,34 +795,7 @@ h2 span {
 
 .testimonial__text {
   font-size: 1.7rem;
-  margin-bottom: 3.5rem;
   color: var(--grey-dark);
-}
-
-.testimonial__author {
-  margin-left: 3rem;
-  font-style: normal;
-
-  display: grid;
-  grid-template-columns: 6.5rem 1fr;
-  column-gap: 2rem;
-}
-
-.testimonial__photo {
-  grid-row: 1 / span 2;
-  width: 6.5rem;
-  border-radius: var(--rounded-circle);
-}
-
-.testimonial__name {
-  font-size: 1.7rem;
-  font-weight: 500;
-  align-self: end;
-  margin: 0;
-}
-
-.testimonial__location {
-  font-size: 1.5rem;
 }
 
 .section__title--testimonials {
@@ -791,7 +810,6 @@ h2 span {
 }
 
 .section--sign-up .section__header {
-  /* color: var(--white); */
   text-align: center;
 }
 
