--- a/assets/style.css
+++ b/assets/style.css
@@ -279,7 +279,7 @@ body {
 }
 
 .btn.btn-primary:hover:after {
-  left: 120%;
+  left: 130%;
   transition: all 0.5s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
@@ -311,13 +311,6 @@ body {
   animation: float10 6s ease-in-out infinite;
 }
 
-.btn--text svg {
-  width: 1.6rem;
-  height: 1.6rem;
-  transform: rotate(90deg);
-  fill: var(--primary);
-}
-
 .btn--text:hover {
   background: none;
 }
@@ -345,16 +338,25 @@ img {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 9rem;
+  min-height: 9rem;
   width: 100%;
   padding: 0 6rem;
   z-index: 100;
+  position: relative;
+  transition: all 0.3s ease-in-out;
 }
 
-/* nav and sticky class at the same time */
 .nav.sticky {
+  top: -10rem;
   position: fixed;
-  background-color: rgba(255, 255, 255, 0.95);
+  background-color: rgba(var(--white-rgb), 0.8);
+  backdrop-filter: blur(1rem);
+  box-shadow: 0 0.1rem 1rem 0 rgba(var(--black-rgb), 0.1);
+  transition: all 0.3s ease-in-out;
+}
+
+.nav.show {
+  top: 0;
 }
 
 .nav__logo {
@@ -366,10 +368,7 @@ img {
   display: flex;
   align-items: center;
   list-style: none;
-}
-
-.nav__item {
-  margin-left: 4rem;
+  gap: 5rem;
 }
 
 .nav__link:link,
@@ -448,23 +447,39 @@ h2 span {
   display: inline-block;
 }
 
-.hover-bottom::after {
+.hover-dot::after {
   content: '';
-  width: 0.6rem;
-  height: 0.6rem;
+  width: 1rem;
+  height: 1rem;
   display: block;
-  left: 0;
-  bottom: 0;
+  bottom: 1rem;
+  z-index: -1;
   position: absolute;
   background-image: var(--gradient);
   border-radius: var(--rounded-2);
   transition: all 0.3s cubic-bezier(0.39, 0.575, 0.565, 1);
 }
 
-.hover-bottom:hover::after {
+.hover-dot:hover::after {
   width: 100%;
   height: 0.2rem;
   bottom: 0.2rem;
+}
+
+.nav__link.hover-dot::after {
+  left: -1.6rem;
+}
+
+.nav__link.hover-dot:hover::after {
+  left: 0;
+}
+
+.btn--text.hover-dot::after {
+  right: -1.6rem;
+}
+
+.btn--text.hover-dot:hover::after {
+  right: 0;
 }
 
 .highlight::after {
@@ -705,7 +720,7 @@ h2 span {
 .slider__btn svg {
   width: 3rem;
   height: 3rem;
-  /* margin-top: 0.1rem; */
+  margin-top: 0.1rem;
   fill: var(--tertiary);
 }
 
