--- a/assets/style.css
+++ b/assets/style.css
@@ -332,10 +332,6 @@ img {
   vertical-align: middle;
 }
 
-.lazy-img {
-  filter: blur(20px);
-}
-
 /* NAVIGATION */
 .nav {
   display: flex;
@@ -443,6 +439,10 @@ h4 {
   -webkit-animation: float-10 4s ease-in-out infinite;
 }
 
+.header__img.lazy-img {
+  filter: blur(1rem);
+}
+
 h1 span,
 h2 span {
   position: relative;
@@ -513,39 +513,37 @@ h2 span {
 }
 
 .grid-item {
-  border-radius: var(--rounded-4);
   overflow: hidden;
+  grid-row: span 2;
   background-color: var(--light);
+  border-radius: var(--rounded-4);
 }
 
-.grid-item-1 {
+.grid-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.grid-item.logo {
   grid-column: span 1;
-  grid-row: span 2;
+  border-radius: var(--rounded-2);
 }
 
-.grid-item-2 {
+.grid-item.logo img {
+  object-fit: contain;
+}
+
+.grid-item.icon {
   grid-column: span 2;
-  grid-row: span 2;
 }
 
-.grid-item-3 {
+.grid-item.card {
   grid-column: span 5;
-  grid-row: span 2;
 }
 
-.grid-item-4 {
-  grid-column: span 2;
-  grid-row: span 2;
-}
-
-.grid-item-5 {
+.grid-item.digital {
   grid-column: span 4;
-  grid-row: span 2;
-}
-
-.grid-item-6 {
-  grid-column: span 2;
-  grid-row: span 2;
 }
 
 .grid-item .features {
@@ -555,17 +553,8 @@ h2 span {
   margin: 0 12rem;
 }
 
-.grid-item.features__img.logo {
-  background: url(/assets/img/the-bankist-lazy.png) center no-repeat;
-  background-size: contain;
-}
-.grid-item.features__img.card {
-  background: url(/assets/img/card-lazy.jpg) center no-repeat;
-  background-size: cover;
-}
-.grid-item.features__img.digi {
-  background: url(/assets/img/digital-lazy.jpg) center no-repeat;
-  background-size: cover;
+.lazy-img {
+  filter: blur(2rem);
 }
 
 .grid-item.features__feature {
@@ -598,7 +587,6 @@ h2 span {
   max-width: 100rem;
   margin: 12rem auto 0 auto;
   border-radius: var(--rounded-4);
-  /* background-color: rgba(var(--tertiary-rgb), 0.04); */
   background-color: var(--tertiary);
 }
 
@@ -642,9 +630,9 @@ h2 span {
 
 .operations__content.--active {
   display: grid;
-  grid-template-columns: 4rem 1fr;
-  column-gap: 4rem;
   row-gap: 0.5rem;
+  column-gap: 4rem;
+  grid-template-columns: 4rem 1fr;
 }
 
 .operations__content p {
