--- a/assets/style.css
+++ b/assets/style.css
@@ -322,12 +322,9 @@ p {
   color: var(--grey-dark);
 }
 
-/* This is BAD for accessibility! Don't do in the real world! */
-button:focus {
-  outline: none;
-}
-
 img {
+  max-width: 100%;
+  height: auto;
   transition: filter 0.5s;
   vertical-align: middle;
 }
@@ -696,69 +693,64 @@ h2 span {
   z-index: 10;
   border: none;
   color: var(--tertiary);
+  transform: translateY(-50%);
   background-image: var(--gradient);
   border-radius: var(--rounded-2);
   height: 6rem;
   width: 6rem;
   cursor: pointer;
+  outline: 0 solid var(--tertiary);
   transition: all ease-in-out 0.3s;
+  svg {
+    width: 3rem;
+    height: 3rem;
+    margin-top: 0.1rem;
+    fill: var(--tertiary);
+  }
 }
 
-.slider__btn:hover {
-  outline: 0.6rem solid var(--tertiary);
+.slider__btn:hover,
+.slider__btn.--hover {
+  outline-width: 0.6rem;
+  transform: translateY(-50%) scale(1.1);
 }
 
-.slider__btn svg {
-  width: 3rem;
-  height: 3rem;
-  margin-top: 0.1rem;
-  fill: var(--tertiary);
-}
-
-.slider__btn--left {
+.slider__btn.--left {
   left: 6%;
-  transform: translate(-50%, -50%);
   svg {
     transform: rotate(180deg);
   }
 }
 
-.slider__btn--right {
+.slider__btn.--right {
   right: 6%;
-  transform: translate(50%, -50%);
 }
 
 .dots {
   position: absolute;
-  bottom: 5%;
+  bottom: 2%;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
+  gap: 4rem;
 }
 
 .dots__dot {
   border: none;
-  background-color: var(--white);
-  opacity: 0.7;
-  height: 1rem;
-  width: 1rem;
-  border-radius: var(--rounded-circle);
-  margin-right: 1.75rem;
+  width: 1.4rem;
+  height: 1.4rem;
   cursor: pointer;
-  transition: all 0.5s;
-
-  /* Only necessary when overlying images */
-  /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
-}
-
-.dots__dot:last-child {
-  margin: 0;
+  background-color: var(--grey);
+  transition: all 0.3s ease-in-out;
+  border-radius: var(--rounded-circle);
+  box-shadow: rgba(var(--black-rgb), 0.4) 0 0.1rem 0.2rem 0 inset;
 }
 
 .dots__dot.--active {
-  /* background-color: var(--white); */
-  background-color: var(--grey-dark);
-  opacity: 1;
+  pointer-events: none;
+  transform: scale(1.2);
+  background-color: none;
+  background-image: var(--gradient);
 }
 
 /* TESTIMONIALS */
